# Beyondmimic_Deploy

./: .gitignore  CMakeLists.txt  FSM_ARCHITECTURE.md  NOTICE.md  README.md  README.zh.md
LICENSES/: unitree_rl_gym-BSD-3-Clause.txt
app/: main.cpp
common/: ProjectPath.h
configs/loco_mode/: g1.yaml
configs/redred/: g1.yaml
core/: ControlState.h  ControlTypes.cpp  ControlTypes.h  JointProfile.h  SafetySupervisor.cpp  SafetySupervisor.h  StateMachine.cpp  StateMachine.h
hardware/unitree/: AtomicLock.h  Crc.cpp  Crc.h  DataBuffer.h  Joystick.h  UnitreeController.cpp  UnitreeController.h
inference/: OnnxRuntime.cpp  OnnxRuntime.h  Tensor.h
model/: README.md
states/: StateFactory.cpp  StateFactory.h
states/basic/: BasicStates.cpp  BasicStates.h
states/loco/: LocoConfig.cpp  LocoConfig.h  LocoState.cpp  LocoState.h
states/policy/: PolicyState.cpp  PolicyState.h
states/redred/: RedRedCastState.cpp  RedRedCastState.h  RedRedConfig.cpp  RedRedConfig.h  RedRedState.cpp  RedRedState.h
states/startup/: StartupReadyState.cpp  StartupReadyState.h
